# voronoi-tessellation

./: CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  Sanitizers.cmake  demo  in.txt  presentation.url  run.sh  sample_input.txt
app/: devmain.cpp  main.cpp  rand_input.cpp  test.cpp
include/fsl3d/: common.hpp  fortunes.cpp  naive.cpp  utils.cpp  voronoi.hpp
include/ogview/: simviewer.hpp  viewabledata.hpp  voronoi_viewable.hpp
lib/: voronoi_viewable.cpp
test/: voronoi_viewable.cpp
